--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
             background: #111;
         }
 
-        /* ------------------------------- */
         /* NAVIGATION BAR */
-        /* ------------------------------- */
         nav {
             width: 100%;
             background: #007BFF;
@@ -99,20 +97,18 @@
             transform: scale(1.05);
         }
 
-        /* ------------------------------- */
         /* BANNER */
-        /* ------------------------------- */
         .banner {
             width: 100%;
-            height: 260px;
-            background-image: url('banner.jpg'); /* Thay ảnh nếu muốn */
+            height: 300px;
+            background-image: url('/mnt/data/32e96f17-c310-431c-ad2c-b9878d0819e6.png'); /* ảnh banner mới */
             background-size: cover;
             background-position: center;
             display: flex;
             justify-content: center;
             align-items: center;
             color: white;
-            font-size: 40px;
+            font-size: 42px;
             font-weight: bold;
             text-shadow: 3px 3px 10px rgba(0,0,0,0.5);
         }
@@ -122,9 +118,7 @@
             margin: 30px 0;
         }
 
-        /* ------------------------------- */
         /* MEMBERS GRID */
-        /* ------------------------------- */
         .container {
             display: grid;
             grid-template-columns: repeat(3, 1fr);
@@ -163,9 +157,7 @@
             color: #007BFF;
         }
 
-        /* ------------------------------- */
         /* LESSON LIST */
-        /* ------------------------------- */
         .lessons {
             margin: 40px auto;
             padding: 20px;
@@ -202,9 +194,7 @@
             opacity: 0.9;
         }
 
-        /* ------------------------------- */
         /* FORM FEEDBACK */
-        /* ------------------------------- */
         .feedback {
             max-width: 800px;
             margin: 50px auto;
@@ -289,9 +279,7 @@
             background: #333;
         }
 
-        /* ------------------------------- */
         /* FOOTER */
-        /* ------------------------------- */
         footer {
             margin-top: 50px;
             background: #007BFF;
@@ -301,9 +289,7 @@
             font-size: 18px;
         }
 
-        /* ------------------------------- */
         /* RESPONSIVE */
-        /* ------------------------------- */
         @media (max-width: 800px) {
             .container {
                 grid-template-columns: repeat(2, 1fr);
@@ -331,7 +317,7 @@
 
     <!-- BANNER -->
     <div class="banner">
-        Nhóm 5
+        BÁO CÁO TIN HỌC
     </div>
 
     <h1 id="members">Các thành viên của nhóm</h1>
@@ -381,8 +367,6 @@
             <li><a href="#">Bài 5: Thực hành chia sẻ tài nguyên</a></li>
             <li><a href="https://www.canva.com/design/DAG2fE9kO9E/view?utm_source=sharebutton" target="_blank">Bài 6: Giao tiếp và ứng xử trong không gian mạng</a></li>
             <li><a href="#">Bài 7: HTML và cấu trúc trang web</a></li>
-
-            <!-- NHỮNG BÀI BẠN ĐÃ TẠO FILE HTML -->
             <li><a href="bai8.html">Bài 8: Định dạng văn bản</a></li>
             <li><a href="bai9.html">Bài 9: Tạo danh sách, bảng</a></li>
             <li><a href="bai10.html">Bài 10: Tạo liên kết</a></li>
